Add farcaster.json for YayOrNay miniapp configuration

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DAO Creator Coin Swipe Vote</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
+    <title>YayOrNay - DAO Swipe</title>
+    <meta property="og:image" content="https://your-domain.com/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <meta name="twitter:image" content="https://your-domain.com/og-image.png">
+    <meta name="fc:miniapp" content='{
+      "version":"next",
+      "imageUrl":"https://your-domain.com/embed-image.png",
+      "button":{
+        "title":"Vote on Proposals",
+        "action":{
+          "type":"launch_miniapp",
+          "name":"YayOrNay",
+          "url":"https://your-domain.com",
+          "splashImageUrl":"https://your-domain.com/splash.png",
+          "splashBackgroundColor":"#f9fafb"
+        }
+      }
+    }' />
 </head>
   <body>
     <div id="root"></div>
