--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YayOrNay - DAO Swipe</title>
-    <meta property="og:image" content="https://your-domain.com/og-image.png">
+    <meta property="og:image" content="https://yayornay.vercel.app/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://your-domain.com/og-image.png">
+    <meta name="twitter:image" content="https://yayornay.vercel.app/og-image.png">
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://your-domain.com/embed-image.png",
+      "imageUrl":"https://yayornay.vercel.app/embed-image.png",
       "button":{
         "title":"Vote on Proposals",
         "action":{
           "type":"launch_miniapp",
           "name":"YayOrNay",
-          "url":"https://your-domain.com",
-          "splashImageUrl":"https://your-domain.com/splash.png",
+          "url":"https://yayornay.vercel.app",
+          "splashImageUrl":"https://yayornay.vercel.app/splash.png",
           "splashBackgroundColor":"#f9fafb"
         }
       }
