update miniapp image URL to use og-image.jpg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:image" content="https://yayornay.vercel.app/og-image.png">
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://yayornay.vercel.app/embed-image.png",
+      "imageUrl":"https://yayornay.vercel.app/og-image.jpg",
       "button":{
         "title":"Vote on Proposals",
         "action":{
